# todo-app

./: LICENSE
todo_api/: pyproject.toml
todo_api/src/accounts/: serializers.py  urls.py  views.py
todo_api/src/tasks/: filters.py  models.py  serializers.py  urls.py  views.py
todo_api/src/tasks/migrations/: 0001_initial.py
todo_api/src/todo/: settings.py  urls.py
todo_ui/: package-lock.json  package.json
